--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,11 @@ google_analytics_key: "UA-71534751-1"
 
 ### template colors, used site-wide via css ###
 colors:
-  black:     '#111111'
-  white:     '#f8f8f8'
+  black:    '#111111'
+  white:    '#f8f8f8'
   grey:     '#CACACA'
-  intro:      '#122042'
+  intro:    '#D3DBEF'
   what:     '#46B29D'
-  why:    '#F0CA4D'
-  features:    '#E37B40'
-  signup: '#DE4949'
+  why:      '#F0CA4D'
+  features: '#E37B40'
+  signup:   '#DE4949'
